- [x] thread router through NewInbound, remove SetRouter
- [x] port dispatcher-based examples and tests
- [x] encoding/raw -> v2/yarpcraw
- [x] yarpcraw.Encoding -> yarpc.Encoding("raw") in tests to decouple raw package
- [x] encoding/json -> v2/yarpcjson
- [x] internal/clientconfig -> v2/internal/clientconfig
- [x] peer (as peerchooser) -> v2/yarpcpeer.NewSingle
- [x] peer/hostport -> v2.Address or v2/yarpcpeer.AbstractPeer (rename embedded Peer to AbstractPeer on *httpPeer)
- [x] yarpc.OpentracingTags -> v2/yarpctracing.Tags
- [x] Outbound Start/Stop lifecycle no longer drives chooser Start/Stop lifecycle.
      [x] consequently, outbound no longer needs to implement Start/Stop lifecycle.
      [x] tests fixed to not use lifecycle
- [x] reg as a free variable -> router
- [x] moved internal internal/errors.ZeroAddrToHostPort to v2/internal/internalyarpcerrors
- [x] decouple NewInbound from NewTransport
- [x] decouple NewOutbound from NewTransport (except NewSingleOutbound)
- [x] transport -> dialer everywhere
- [x] move the connectorsGroup.Done() method into a defer block to ensure the dialer.Stop() returns, even if NotifyStatusChanged (particularly on a mock) panics.
- [x] remove Lifecycle from Dialer
- [x] remove Lifecycle from Outbound
- [ ] remove Lifecycle from Inbound
- [x] change NewTransport constructor with options pattern to Dialer{} struct
- [ ] fix options pattern
- [ ] thread middleware chains as options to encoding constructors
- [ ] exorcise ClientConfig interface in favor of OutboundConfig struct
- [ ] thread context through Start/Stop
- [ ] revisit yarpc.ErrTansportHsNoReferenceToPeer -> yarpcerrors.ErrDialerHasNoReferenceToPeer
- [ ] dialer should have no Start, Close instead of Stop
- [ ] Connecting peer status -> ELIMINATED
- [ ] rewrite doc.go examples
- [ ] consider threading a custom dialer through the Dialer constructor
- [ ] restore validator middleware
- [ ] decorate a router with middleware